lib/libremidi/tests/corpus/Invalid/No Header Chunk/mission-5.mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|01 Feb 2000 23:20:16 -0000
vti_author:SR|madeitaly.geo
vti_syncwith_www.animazione.net\:80:TR|01 Feb 2000 23:20:16 -0000
vti_syncwith_localhost\\c\:\\documenti\\madeitaly2/c\:/documenti/madeitaly2:TR|01 Feb 2000 23:20:16 -0000
vti_syncwith_www.geocities.com\:80/madeitaly:TR|01 Feb 2000 23:20:16 -0000
vti_modifiedby:SR|madeitaly.geo
vti_timecreated:TR|18 Apr 2000 10:38:57 -0000
vti_backlinkinfo:VX|home.htm index2.htm Homepage.htm
vti_extenderversion:SR|4.0.2.3712
vti_syncwith_localhost\\c\:\\webshare\\wwwroot\\madeitaly/c\:/webshare/wwwroot/madeitaly:TR|01 Feb 2000 23:20:16 -0000
